Show a custom message in the page info bubble for view-source URLs

Screenshot: https://drive.google.com/file/d/0B9q2eN9gDoUIMGYyeE85Ynk2VGs/view?usp=sharing

BUG=635776
TBR=sdefresne,caitkp

Review-Url: https://codereview.chromium.org/2232453002
Cr-Commit-Position: refs/heads/master@{#412067}

Former-commit-id: e1feca06c43dba6d9465e9a06370cbab24f5d7fe